<resources>
    <string name="app_name">Westerberg Weather</string>
    <string name="locationHeader">location</string>

    <string name="weathericon">WeatherIcon</string>
    <string name="city">city</string>
    <string name="detaljer">details</string>
    <string name="oppdatert">updated</string>
    <string name="temperatur">temperature</string>

    <string name="change_city">Change city</string>

    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>

    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <string name="weather_aliens" translatable="false">&#xf049;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="open_weather_maps_app_id">4c0df1620321fd8c9ed04872b26378ad</string>
    <string name="search">search</string>
    <string name="search_icon">Search icon</string>
    <string name="searchText">Search</string>

</resources>
